k8s/deploy_node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
      - name: postgre
        image: postgres:13.1
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgre
spec:
  selector:
    app: postgre
  ports:
  - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewfilmes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reviewfilmes
  template:
    metadata:
      labels:
        app: reviewfilmes
    spec:
      containers:
      - name: reviewfilmes
        image: jancunha/review-filmes
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reviewfilmes
spec:
  selector:
    app: reviewfilmes
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30000
  type: NodePort
