k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
      - name: postgre
        image: postgres:13.1
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgre
spec:
  selector:
    app: postgre
  ports:
  - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewfilmes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reviewfilmes
  template:
    metadata:
      labels:
        app: reviewfilmes
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/path: '/metrics'
    spec:
      containers:
      - name: reviewfilmes
        image: jancunha/review-filmes:v6
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reviewfilmes
spec:
  selector:
    app: reviewfilmes
  ports:
  - port: 80
    targetPort: 8080
    # nodePort: 30000
  # type: LoadBalancer # NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  ingressClassName: nginx
  rules:
  - host: filmes.192.168.1.200.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: reviewfilmes
            port: 
              number: 80
